--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -88,6 +88,7 @@ package() {
   sed '/STATEFILE=--statefile \/var\/lib\/mympd\/mympd.state/c STATEFILE=\/var\/lib\/mympd\/mympd.state' -i "$pkgdir/etc/mympd/options"
 
   # FIXES FOR SERVICE FILE
+  sed '/Requires=/s/$/ mpd.service/' -i "$pkgdir/usr/lib/systemd/system/mympd.service"
   sed '/Environment=COVERIMAGE=--coverimage folder.jpg/c Environment=COVERIMAGE=folder.jpg' -i "$pkgdir/usr/lib/systemd/system/mympd.service"
   sed '/Environment=STATEFILE=--statefile \/var\/lib\/mympd\/mympd.state/c Environment=STATEFILE=\/var\/lib\/mympd\/mympd.state' -i "$pkgdir/usr/lib/systemd/system/mympd.service"
   sed 's/$COVERIMAGE/--coverimage $COVERIMAGE/g' -i "$pkgdir/usr/lib/systemd/system/mympd.service"
