disable ssl by default

--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -83,7 +83,8 @@ package() {
     fi
   fi
 
-  # FIXES FOR DEFAULT
+  # FIXES FOR OPTIONS 
+  sed 's/^SSL/#SSL/' -i "$pkgdir/etc/mympd/options"
   sed '/COVERIMAGE=--coverimage folder.jpg/c COVERIMAGE=folder.jpg' -i "$pkgdir/etc/mympd/options"
   sed '/STATEFILE=--statefile \/var\/lib\/mympd\/mympd.state/c STATEFILE=\/var\/lib\/mympd\/mympd.state' -i "$pkgdir/etc/mympd/options"
 
