--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=mympd
 _pkgname=myMPD
-pkgver=4.0.0
+pkgver=4.1.0
 pkgrel=1
 pkgdesc="A standalone MPD Web GUI based on YMPD - Default port set to 80"
 arch=('x86_64' 'armv7h' 'aarch64')
@@ -20,8 +20,8 @@ replaces=()
 install=mympd.install
 source=("https://github.com/jcorporation/${_pkgname}/archive/v${pkgver}.tar.gz"
         'mympd.install')
-sha256sums=('8eb1d77ca4a0fb23de07be382a8c2c628d12d3c0de97f7ca964ff328dfb078bc'
-            'f02555435a82fd8a3ef554986b61c5d520baabb94df7e7bf997b71bd1901c64f')
+sha256sums=('ec776fa76b2623f27e147abbb0e182d54fb8b80917a35533e58d95ca9f0571d1'
+            'b01671a1153764d96655069f0a9ddf8ab2f7370f60a3789f6f1b4f370474df67')
 
 prepare() {
   export java=$(which java 2> /dev/null)
@@ -79,7 +79,9 @@ package() {
   cd "${srcdir}/${_pkgname}-${pkgver}/release"
   make DESTDIR="$pkgdir/" install
 
+  ### DON'T OVERWRITE CURRENT CONFIG ###
+  mv "${pkgdir}/etc/mympd/mympd.conf" "${pkgdir}/etc/mympd/mympd.conf.dist"
+
   install -Dm644  "${srcdir}/${_pkgname}-${pkgver}/contrib/mympd.service" "$pkgdir/usr/lib/systemd/system/mympd.service"
-  install -Dm644  "${srcdir}/${_pkgname}-${pkgver}/contrib/mympd.conf" "$pkgdir/etc/mympd/mympd.conf.dist" 
 }
 
