--- a/mympd/PKGBUILD
+++ b/mympd/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: K. Loz <cultofrobots [at] prtonmail [dot] com>
+# Maintainer: K. Loz <cultofrobots [at] protonmail [dot] com>
 # Based on jcorporation's myMPD mkrelease.sh 
 # Website: https://github.com/jcorporation/myMPD
 # PKGBUILD Based on mympd-archphile by Mike Andonov <info [at] archphile [dot] org>
